# kaliban

./: .stylish-haskell.yaml  .travic.yml  Dockerfile  README.md  deploy.sh  kaliban.cabal  stack.yaml
app/: Main.hs
src/: Brain.hs  Conduit.hs  Lib.hs  Start.hs  Util.hs
src/Brains/: AI.hs  Commands.hs  Home.hs  Server.hs  Speech.hs  Trello.hs
src/Conduits/: VK.hs
src/Network/Google/: Speech.hs
src/Network/Google/Resource/Speech/Operations/: Get.hs
src/Network/Google/Resource/Speech/Speech/: Longrunningrecognize.hs  Recognize.hs
src/Network/Google/Speech/: Types.hs
src/Network/Google/Speech/Types/: Product.hs  Sum.hs
src/VK/: API.hs  Longpoll.hs  LongpollStream.hs  ResponseTypes.hs
src/VK/API/: Groups.hs  Messages.hs  Users.hs
