name:                kaliban
version:             0.1.0.0
homepage:            https://github.com/Termina1/kaliban
license:             BSD3
license-file:        LICENSE
author:              Termina1
maintainer:          terminal2010@gmail.com
copyright:           2017 Termina1
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable kaliban-exe
  hs-source-dirs:      app, src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Brain
                     , Brains.AI
                     , Brains.Trello
                     , Conduit
                     , Conduits.VK
                     , VK.API
                     , VK.API.Messages
                     , VK.ResponseTypes
                     , Util

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scientific
                     , unordered-containers
                     , vector
                     , utf8-string
                     , http-conduit
                     , url
                     , optional-args
                     , time
                     , singletons
                     , iso8601-time
  default-language:    Haskell2010

test-suite kaliban-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kaliban
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Termina1/kaliban
